--- a/datausa/assets/scss/elements/_search.scss
+++ b/datausa/assets/scss/elements/_search.scss
@@ -784,7 +784,7 @@ body.search {
   max-height: $search-mini-height;
   // background-color: #fff;
   @include shadow(0 1px 2px rgba(0,0,0,0.15),0 0 1px rgba(0,0,0,0.4));
-  z-index: 4;
+  z-index: 5;
 
   &:before {
     content: "";
